more code clean + simlify element sources and stuff